@@ -1,11 +1,11 @@
 # http://module-build.sourceforge.net/META-spec.html
 #XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
 name:         Test-Harness
-version:      2.63_01
+version:      2.63_02
 version_from: lib/Test/Harness.pm
 installdirs:  perl
 requires:
     File::Spec:                    0.6
 
 distribution_type: module
-generated_by: ExtUtils::MakeMaker version 6.30
+generated_by: ExtUtils::MakeMaker version 6.17
